# poker-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.md
benches/: compare.rs  equity_bench.rs
src/: lib.rs  types.rs
src/equity/: blocker.rs  holdem.rs  mod.rs  omaha.rs
src/evaluation/: cards.rs  combinations.rs  evaluator.rs  mod.rs
src/range/: holdem.rs  omaha.rs
ts/: package-lock.json  package.json
ts/src/: index.ts
