[package]
name = "poker-wasm"
version = "1.3.0"
authors = ["Conrad Kay"]
repository = "https://github.com/conradkay/power-range-rs"
description = "WASM range vs range equity for NLHE"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
wasm-bindgen = "0.2.100"
rand = "0.9.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
debug = true

[dev-dependencies]
rand = "0.9.1"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "equity_bench"
harness = false
